--- a/conf/application.conf
+++ b/conf/application.conf
@@ -8,6 +8,7 @@ application.name=tasks
 # Otherwise set to prod.
 application.mode=dev
 %prod.application.mode=prod
+%clevercloud.application.mode=prod
 
 # Secret key
 # ~~~~~
@@ -117,7 +118,7 @@ db=mem
 #
 # Specify the ddl generation pattern to use. Set to none to disable it 
 # (default to update in DEV mode, and none in PROD mode):
-# jpa.ddl=update
+jpa.ddl=update
 #
 # Debug SQL statements (logged using DEBUG level):
 # jpa.debugSQL=true
